Refactor: improve code structure and add environment variables

--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ SERVER_PORT=3000
 DB_HOST='localhost'       # Indirizzo del server del database (di solito 'localhost' in locale)
 DB_USER='root'            # Nome utente per accedere al database
 DB_PASSWORD='rootroot'    # Password dell'utente del database
-DB_NAME='post_db'        # Nome del database che verrà utilizzato
+DB_NAME='post_db'         # Nome del database che verrà utilizzato
+
+FRONTEND_APP='http://localhost:5173/'     
